fix(index): fix categories scrollable container, add padding to prevent clipping categories items while hover

--- a/styles/index.css
+++ b/styles/index.css
@@ -53,6 +53,7 @@
     padding-bottom: 4px;
     scrollbar-width: none;
     justify-content: flex-start;
+    padding: 10px 0;
 }
 .categories-scroll::-webkit-scrollbar { display: none; }
 .categories-scroll.no-scroll { justify-content: center; }
